crypto-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-deployment
spec:
  selector:
    matchLabels:
      app: crypto-spring-service
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: crypto-spring-service
    spec:
      containers:
        - name: crypto-spring-service
          image: sujitht/crypto-k8-service:v-1641033473
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: crypto-service
spec:
  selector:
    app: crypto-spring-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
  type: LoadBalancer
