crypto-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: tradecrypto.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crypto-service
                port:
                  number: 8080
